--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="GugahDevHub">
-        <meta name="description" content="OptimusTech - Plataforma de recrutamento para empresas de tecnologia, desenvolvida com HTML, CSS e JavaScript. Focada em usabilidade, design responsivo e eficiência no processo seletivo.">
+        <meta name="description" content="OptimusTech - Plataforma de recrutamento para empresas de tecnologia, desenvolvida com HTML e CSS. Focada em usabilidade, design responsivo e eficiência no processo seletivo.">
         <!-- <meta http-equiv="refresh"  content="2"> -->
 
         <title>OptimusTech</title>
